<resources>
    <string name="app_name">Bee</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="phone">phone</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="btn1">BTN1</string>
    <string name="write">WRITE</string>
    <string name="clear">CLEAR</string>
    <string name="nameTextView">Name</string>
    <string name="surnameTextView">Surname</string>
    <string name="phoneTextView">Phone</string>
    <string name="ageTextView">Age</string>
    <string name="birthday">birthday</string>
    <string name="delete">Delete</string>
    <string name="next_screen">Next Screen</string>
    <string name="grid">Grid</string>
    <string name="linear">Linear</string>
    <string name="additional_task_activity">Additional task Activity</string>
    <string name="cute_video_with_puppy">Cute video with puppy</string>
    <string name="instagram">Instagram</string>
    <string name="get_compliment">Get compliment</string>
    <string name="save_pictures_in_internal_storage">Save pictures in internal storage</string>
    <string name="save_pictures_in_external_storage">Save pictures in external storage</string>
    <string name="order_by_name">Order by name</string>
    <string name="order_by_age">Order by age</string>
    <string name="clear_order">Clear order</string>
    <string name="show_5_elements">Show 5 elements</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="search_by_person_surname">Search by person surname</string>
    <string name="show_all">Show all</string>
    <string name="show_persons_with_address">Show persons with address</string>
    <string name="city">city</string>
    <string name="street">street</string>
    <string name="house_number">house number</string>
    <string name="add_address">Address</string>
    <string name="address">Address</string>
    <string name="save_address">Save address</string>
    <string name="show_all_el">Show all</string>
    <string name="email">email</string>
    <string name="category">category</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="rating">rating</string>
    <string name="update">Update</string>
    <string name="response">Response</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>