<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/title"
            style="@style/EditTextMainTheme"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/category"
            style="@style/EditTextMainTheme"
            android:hint="@string/category"
            android:inputType="text" />

        <EditText
            android:id="@+id/price"
            style="@style/EditTextMainTheme"
            android:hint="@string/price"
            android:inputType="number" />

        <EditText
            android:id="@+id/rating"
            style="@style/EditTextMainTheme"
            android:hint="@string/rating"
            android:inputType="number" />

        <Button
            android:id="@+id/addItem"
            style="@style/buttonEditTheme"
            android:enabled="false"
            android:text="@string/add" />

        <TextView
            android:id="@+id/result"
            style="@style/EditTextMainTheme"
            android:text="@string/response"
            android:textAlignment="center" />

        <ProgressBar
            android:id="@+id/idLoadingPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>