<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow>

                <TextView
                    style="@style/TextViewForHW8"
                    android:layout_weight="0.5"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/TextViewForHW8"
                    android:layout_weight="2"
                    android:text="@string/name" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextViewForHW8"
                    android:layout_weight="0.5"
                    android:text="@string/surname" />

                <TextView
                    android:id="@+id/surnameTextView"
                    style="@style/TextViewForHW8"
                    android:layout_weight="2"
                    android:text="@string/surname" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextViewForHW8"
                    android:layout_weight="0.5"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/ageTextView"
                    style="@style/TextViewForHW8"
                    android:layout_weight="2"
                    android:text="@string/age" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextViewForHW8"
                    android:layout_weight="0.5"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phoneTextView"
                    style="@style/TextViewForHW8"
                    android:layout_weight="2"
                    android:text="@string/phone" />
            </TableRow>


            <TableRow>

                <TextView
                    style="@style/TextViewForHW8"
                    android:layout_weight="0.5"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/birthdayTextView"
                    style="@style/TextViewForHW8"
                    android:layout_weight="2"
                    android:text="@string/birthday" />
            </TableRow>


            <TableRow>

                <TextView
                    style="@style/TextViewForHW8"
                    android:layout_weight="0.5"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/selection"
                    style="@style/TextViewForHW8"
                    android:layout_weight="2" />
            </TableRow>

        </TableLayout>

        <Spinner
            android:id="@+id/addressesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveAddress"
            style="@style/BtnsTheme"
            android:text="@string/save_address" />

        <Button
            android:id="@+id/showPersonAddress"
            style="@style/BtnsTheme"
            android:text="@string/show_all_el" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>