<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/conditionals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextForSearchBySurname"
            style="@style/EditTextMainTheme"
            android:hint="@string/search_by_person_surname"
            android:textAlignment="center" />

        <Button
            android:id="@+id/searchBtn"
            style="@style/BtnsTheme"
            android:text="@string/search" />


        <RadioGroup
            android:id="@+id/conditionalRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/showAllRdBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all" />

            <RadioButton
                android:id="@+id/showPersonsWithAddressRdBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_persons_with_address" />
        </RadioGroup>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fullInfoRV"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/conditionals" />

</androidx.constraintlayout.widget.ConstraintLayout>