<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Data"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TableRow>

            <TextView
                android:id="@+id/name"
                android:layout_weight="0.5"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/surname"
                android:layout_weight="0.5"
                android:text="@string/surname"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/surnameTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/phone"
                android:layout_weight="0.5"
                android:text="@string/phone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/age"
                android:layout_weight="0.5"
                android:text="@string/age"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/gender"
                android:layout_weight="0.5"
                android:text="@string/gender"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/genderTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/email"
                android:layout_weight="0.5"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/birthday"
                android:layout_weight="0.5"
                android:text="@string/birthday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/birthdayTextView"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>